add stb for saving images

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,19 @@ cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 set(CMAKE_CUDA_ARCHITECTURES 60)
 project(volume-renderer LANGUAGES CXX CUDA)
 
-add_executable(${PROJECT_NAME} src/main.cu)
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
+add_subdirectory( external/stb )
+message(STB_LIB_HEADERS="${STB_LIB_HEADERS}")
 
-# Required for CUDA builds
+set( SOURCE_FILES
+	src/main.cu
+)
+add_executable( ${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
+target_link_libraries( ${CMAKE_PROJECT_NAME}
+	PRIVATE stb
+)
+target_include_directories( ${CMAKE_PROJECT_NAME}
+	PRIVATE external/stb
+)
+	
+set_property( TARGET ${CMAKE_PROJECT_NAME} PROPERTY CXX_STANDARD 17 )
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
