--- a/external/stb/CMakeLists.txt
+++ b/external/stb/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
 
-file(GLOB LIB_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*)
+file(GLOB_RECURSE LIB_FILES *)
 add_library(stb STATIC ${LIB_FILES})
